k8s-monitoring/multicluster-monitoring/thanos-helm/thanos/templates/service-storegateway.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: storegateway
spec:
  type: ClusterIP
  ports:
    - port: 10902
      targetPort: http
      protocol: TCP
      name: http
    - port: 10901
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: storegateway
