k8s-monitoring/multicluster-monitoring/thanos-helm/thanos/templates/ingressroute-querier-url.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-stage-k8s.hasti.co
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: thanos-stage-k8s.hasti.co
    http:
      paths:
      - backend:
          service:
            name: querier
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - thanos-stage-k8s.hasti.co
    secretName: hasti-tls
